crates/hir-ty/tests/snapshots/jls_inheritance__illegal_modifier_sealed.snap
---
source: crates/hir-ty/tests/jls_inheritance.rs
expression: out
---
FILE /src/com/example/Mods.java:
package com.example;

sealed final class SF {}

@2:0: illegal-combination-of-modifiers: Illegal combination of modifiers: 'final' and 'sealed'
