crates/hir-ty/tests/snapshots/jls_inheritance__implements_non_interface.snap
---
source: crates/hir-ty/tests/jls_inheritance.rs
expression: out
---
FILE /src/com/example/Main.java:
package com.example;

public class Main implements Example {
}

class Example {
}

@2:29: interface-expected-here: Interface expected here
