crates/hir-ty/tests/snapshots/jls_inheritance__inherit_from_final.snap
---
source: crates/hir-ty/tests/jls_inheritance.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

final class Sealed {
    final int x = 1;
}

class Broken extends Sealed {}

@6:21: cannot-inherit-from-final-class: Cannot inherit from 'Sealed'
