crates/hir-ty/tests/snapshots/jls_inheritance__type_variable_superinterface.snap
---
source: crates/hir-ty/tests/jls_inheritance.rs
expression: out
---
FILE /src/com/example/TypeVar.java:
package com.example;

class Base {
}

class Impl<T extends Base> implements T {
}
