crates/hir-ty/tests/snapshots/jls_inheritance__unimplemented_abstract_class.snap
---
source: crates/hir-ty/tests/jls_inheritance.rs
expression: out
---
FILE /src/com/example/Abstract.java:
package com.example;

abstract class A {
    abstract void m();
}
class B extends A {}
class C extends A {
    void m() {}
}

@5:6: unimplemented-abstract-method: Class 'B' must either be declared abstract or implement abstract method 'm()' in 'A'
