crates/hir-ty/tests/snapshots/jls_inheritance__unimplemented_enum_abstract.snap
---
source: crates/hir-ty/tests/jls_inheritance.rs
expression: out
---
FILE /src/com/example/Abstract.java:
package com.example;

class DiffNode {}

enum TreeSide {
    OLD,
    NEW;
    abstract boolean matches(DiffNode node);
}

@4:5: unimplemented-abstract-method: Class 'TreeSide' must either be declared abstract or implement abstract method 'matches()' in 'TreeSide'
