crates/hir-ty/tests/snapshots/jls_inheritance__unimplemented_enum_constant_bodies.snap
---
source: crates/hir-ty/tests/jls_inheritance.rs
expression: out
---
FILE /src/com/example/Abstract.java:
package com.example;

class DiffNode {}

enum TreeSide {
    OLD {
        @Override boolean matches(DiffNode node) { return true; }
    },
    NEW {
        @Override boolean matches(DiffNode node) { return false; }
    };
    abstract boolean matches(DiffNode node);
}
